--- a/index.html
+++ b/index.html
@@ -98,11 +98,12 @@
           </div>
 
           <!-- Desktop Navigation -->
-          <nav class="hidden md:flex items-center space-x-8">
-            <a href="#about" class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90">병원소개</a>
-            <a href="#stats" class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90">수술센터</a>
-            <a href="#team" class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90">의료진</a>
-            <a href="#contact" class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90">오시는길</a>
+          <nav class="hidden md:flex items-center space-x-6 lg:space-x-8">
+            <a href="#greetings" class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90">인사말</a>
+            <a href="pricing.html" class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90">진료비안내</a>
+            <a href="#neutering" class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90">중성화수술</a>
+            <a href="#stemcell" class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90">줄기세포/엑소좀 치료(준비중)</a>
+            <a href="#promotion" class="nav-link text-sm font-medium hover:text-amber-500 transition-colors text-white/90">홍보자료</a>
           </nav>
 
           <!-- Mobile Menu Button -->
@@ -115,10 +116,11 @@
       <!-- Mobile Menu Overlay -->
       <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-white shadow-lg md:hidden border-t">
           <div class="flex flex-col py-4">
-            <a href="#about" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">병원소개</a>
-            <a href="#stats" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">수술센터</a>
-            <a href="#team" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">의료진</a>
-            <a href="#contact" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">오시는길</a>
+            <a href="#greetings" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">인사말</a>
+            <a href="pricing.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">진료비안내</a>
+            <a href="#neutering" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">중성화수술</a>
+            <a href="#stemcell" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">줄기세포/엑소좀 치료(준비중)</a>
+            <a href="#promotion" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">홍보자료</a>
           </div>
       </div>
     </header>
@@ -214,8 +216,8 @@
             </div>
         </section>
 
-        <!-- About Section -->
-        <section id="about" class="py-24 bg-slate-50">
+        <!-- Greetings Section (Formerly About) -->
+        <section id="greetings" class="py-24 bg-slate-50">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="grid md:grid-cols-2 gap-16 items-center">
                     <div class="relative">
@@ -227,13 +229,15 @@
                         </div>
                     </div>
                     <div>
-                        <span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-2 block">Why Choose Us</span>
+                        <span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-2 block">Greetings</span>
                         <h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6 leading-tight">
                             반려동물의 평생 주치의, <br />
                             <span class="text-amber-600">참좋은동물병원</span>입니다.
                         </h2>
                         <p class="text-slate-600 mb-8 leading-relaxed">
-                            단순한 치료를 넘어, 반려동물과 보호자의 마음까지 치유합니다. 최고의 시설에서 이뤄지는 전문적인 의료 서비스와 따뜻한 케어를 경험해보세요.
+                            안녕하십니까, 참좋은동물병원 대표원장 문현철입니다. <br/><br/>
+                            저희 병원은 단순한 치료를 넘어, 반려동물과 보호자의 마음까지 치유하는 것을 목표로 합니다. 
+                            최고의 시설에서 이뤄지는 전문적인 의료 서비스와 따뜻한 케어를 약속드립니다.
                         </p>
                         <ul class="space-y-4">
                             <li class="flex items-center gap-3">
@@ -248,32 +252,23 @@
                                 <i data-lucide="check-circle-2" class="text-amber-600 w-5 h-5 flex-shrink-0"></i>
                                 <span class="text-slate-800 font-medium">High-End급 최신 의료 장비 보유</span>
                             </li>
-                            <li class="flex items-center gap-3">
-                                <i data-lucide="check-circle-2" class="text-amber-600 w-5 h-5 flex-shrink-0"></i>
-                                <span class="text-slate-800 font-medium">보호자 전용 프라이빗 대기실 운영</span>
-                            </li>
                         </ul>
-                        <div class="mt-10">
-                            <a href="#team" class="text-amber-700 font-bold hover:text-amber-900 inline-flex items-center gap-2 border-b-2 border-amber-200 pb-1 hover:border-amber-600 transition-colors">
-                                의료진 소개 보기
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Stats Section -->
-        <section id="stats" class="py-24 bg-slate-900 relative overflow-hidden">
+        <!-- Neutering Section (Formerly Stats) -->
+        <section id="neutering" class="py-24 bg-slate-900 relative overflow-hidden">
             <div class="absolute top-0 left-0 w-full h-full overflow-hidden opacity-30 pointer-events-none">
                 <div class="absolute top-[-50%] left-[-20%] w-[800px] h-[800px] rounded-full bg-blue-900 blur-3xl mix-blend-screen"></div>
                 <div class="absolute bottom-[-50%] right-[-20%] w-[600px] h-[600px] rounded-full bg-amber-900 blur-3xl mix-blend-screen"></div>
             </div>
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
                 <div class="text-center mb-20">
-                    <span class="text-amber-500 font-bold tracking-widest text-sm uppercase mb-3 block">Chamjoeun Medical Record</span>
+                    <span class="text-amber-500 font-bold tracking-widest text-sm uppercase mb-3 block">Specialized Surgery Center</span>
                     <h2 class="text-3xl md:text-5xl font-serif font-bold text-white mb-6 leading-tight">
-                        숫자로 증명하는 <span class="text-amber-400 italic">전문성</span>
+                        전문적인 <span class="text-amber-400 italic">중성화 수술</span>
                     </h2>
                     <p class="text-slate-400 max-w-2xl mx-auto text-lg">
                         누적 중성화 수술 기록을 투명하게 공개하며, 풍부한 임상 경험을 바탕으로 <br class="hidden md:block" />
@@ -286,13 +281,13 @@
                     <div class="absolute inset-0 bg-amber-500/20 blur-3xl rounded-full transform scale-75"></div>
                     <div class="relative bg-gradient-to-br from-slate-800 to-slate-900 border border-amber-500/30 rounded-3xl p-10 md:p-16 text-center shadow-2xl overflow-hidden group hover:border-amber-500/60 transition-colors duration-500">
                          <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-transparent via-amber-500 to-transparent opacity-50"></div>
-                         <h3 class="text-amber-400 font-bold tracking-widest uppercase mb-4 text-sm md:text-base">Total Surgery Cases</h3>
+                         <h3 class="text-amber-400 font-bold tracking-widest uppercase mb-4 text-sm md:text-base">Total Neutering Cases</h3>
                          <div class="text-6xl md:text-8xl font-serif font-bold text-white mb-6 tracking-tight flex justify-center items-start gap-2">
                              <span class="counter-value" data-target="30">0</span>
                              <span class="text-amber-500 text-4xl md:text-6xl mt-2">+</span>
                          </div>
                          <p class="text-slate-300 text-lg md:text-xl font-light">
-                             안전한 마취와 정확한 수술로 쌓아온 <br class="md:hidden"/> <strong class="text-white font-medium">누적 수술 건수</strong>
+                             안전한 마취와 최소 절개로 회복이 빠른 <br class="md:hidden"/> <strong class="text-white font-medium">누적 중성화 수술 건수</strong>
                          </p>
                          <p class="text-slate-400 text-sm mt-4 font-medium">
                             2026년 1월 1일 ~ <span id="current-date"></span> 기준 데이터
@@ -303,7 +298,35 @@
             </div>
         </section>
 
-        <!-- Team Section -->
+        <!-- Stem Cell Section (New - Coming Soon) -->
+        <section id="stemcell" class="py-24 bg-slate-50 relative overflow-hidden">
+             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                 <div class="relative bg-white rounded-3xl overflow-hidden shadow-2xl">
+                     <div class="absolute inset-0">
+                         <img src="https://images.unsplash.com/photo-1579684385127-1ef15d508118?q=80&w=2000&auto=format&fit=crop" alt="Lab Research" class="w-full h-full object-cover opacity-10" />
+                     </div>
+                     <div class="relative z-10 px-6 py-24 md:py-32 text-center">
+                         <span class="inline-block px-4 py-2 rounded-full bg-amber-100 text-amber-700 font-bold text-xs uppercase tracking-widest mb-6">Coming Soon</span>
+                         <h2 class="text-4xl md:text-6xl font-serif font-bold text-slate-900 mb-6">
+                             줄기세포 / 엑소좀 치료
+                         </h2>
+                         <p class="text-slate-600 text-lg max-w-2xl mx-auto mb-10">
+                             난치성 질환 치료의 새로운 희망, <br/>
+                             최첨단 재생 의학 센터가 곧 찾아옵니다.
+                         </p>
+                         <div class="flex flex-wrap justify-center gap-4 text-sm font-medium text-slate-500">
+                             <span class="flex items-center gap-2"><i data-lucide="microscope" class="w-4 h-4"></i> 재생 의학</span>
+                             <span class="w-1 h-1 bg-slate-300 rounded-full"></span>
+                             <span class="flex items-center gap-2"><i data-lucide="dna" class="w-4 h-4"></i> 면역 치료</span>
+                             <span class="w-1 h-1 bg-slate-300 rounded-full"></span>
+                             <span class="flex items-center gap-2"><i data-lucide="activity" class="w-4 h-4"></i> 항노화</span>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+        </section>
+
+        <!-- Medical Team Section (Kept in flow but removed from nav as per request implication, simply exists as content) -->
         <section id="team" class="py-24 bg-white relative border-t border-slate-100">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-16">
@@ -312,9 +335,6 @@
                         최고의 실력을 갖춘 <br class="md:hidden" />
                         <span class="font-serif italic text-amber-700">전문 의료진</span>
                     </h2>
-                    <p class="text-slate-600 max-w-2xl mx-auto">
-                         대학병원 출신 전문 수의사가 아이들의 건강을 위해 끊임없이 연구하고 진료합니다.
-                    </p>
                 </div>
                 
                 <!-- Single Doctor Profile -->
@@ -322,9 +342,9 @@
                     <div class="grid md:grid-cols-5 gap-0">
                         <!-- Image Section -->
                         <div class="md:col-span-2 relative h-[500px] md:h-auto bg-slate-100 group">
-                            <img src="./images/director_moon.jpg=80&w=1000&auto=format&fit=crop" 
+                            <img src="https://images.unsplash.com/photo-1537368910025-700350fe46c7?q=80&w=1000&auto=format&fit=crop" 
                                  alt="문현철 원장" 
-                                 class="absolute inset-0 w-full h-full object-cover object-top filter grayscale group-hover:grayscale-0 transition-all duration-700" />
+                                 class="absolute inset-0 w-full h-full object-cover object-top transition-all duration-700" />
                             <div class="absolute inset-0 bg-gradient-to-t from-slate-900/60 to-transparent md:bg-none"></div>
                             <div class="absolute bottom-6 left-6 text-white md:hidden">
                                 <p class="text-sm tracking-widest uppercase opacity-80 mb-1">Director</p>
@@ -409,19 +429,19 @@
             </div>
         </section>
 
-        <!-- Reviews Section -->
-        <section class="py-24 bg-slate-50">
+        <!-- Promotion / Reviews Section -->
+        <section id="promotion" class="py-24 bg-slate-50">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex flex-col md:flex-row justify-between items-end mb-12 gap-4">
                     <div>
-                        <span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-3 block">Real Stories</span>
+                        <span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-3 block">Promotion & Stories</span>
                         <h2 class="text-3xl md:text-4xl font-bold text-slate-900 leading-tight">
-                            보호자님들의 소중한 <br />
+                            참좋은 홍보자료 및 <br />
                             <span class="text-amber-600 decoration-amber-200 underline decoration-4 underline-offset-4">치료 후기</span>
                         </h2>
                     </div>
                     <a href="#" class="text-slate-500 hover:text-amber-600 font-medium flex items-center gap-2 group transition-colors">
-                        후기 더보기 <span class="inline-block transition-transform group-hover:translate-x-1">→</span>
+                        더보기 <span class="inline-block transition-transform group-hover:translate-x-1">→</span>
                     </a>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -492,14 +512,18 @@
 
     <!-- Footer -->
     <footer id="contact" class="bg-slate-900 text-slate-300">
-        <div class="w-full h-80 bg-slate-800 relative group overflow-hidden">
-            <img src="https://picsum.photos/1920/400?grayscale" alt="Map Location" class="w-full h-full object-cover opacity-50 group-hover:opacity-40 transition-opacity" />
-            <div class="absolute inset-0 flex items-center justify-center">
-                <a href="https://map.google.com" target="_blank" rel="noreferrer" class="bg-white/90 backdrop-blur text-slate-900 px-6 py-3 rounded-full shadow-lg font-bold hover:bg-amber-500 hover:text-white transition-colors flex items-center gap-2">
-                    <i data-lucide="map-pin" class="w-4 h-4"></i>
-                    지도에서 병원 위치 보기
-                </a>
-            </div>
+        <div class="w-full h-96 bg-slate-200 relative">
+            <iframe 
+                title="참좋은동물병원 위치"
+                src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=16&ie=UTF8&iwloc=&output=embed"
+                width="100%" 
+                height="100%" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                class="w-full h-full transition-all duration-700"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
@@ -543,10 +567,10 @@
                 <div>
                     <h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Quick Menu</h4>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="#about" class="hover:text-amber-400 transition-colors">병원 소개</a></li>
-                        <li><a href="#team" class="hover:text-amber-400 transition-colors">의료진 소개</a></li>
-                        <li><a href="#stats" class="hover:text-amber-400 transition-colors">수술 센터</a></li>
-                        <li><a href="#" class="hover:text-amber-400 transition-colors">비급여 진료비 안내</a></li>
+                        <li><a href="#greetings" class="hover:text-amber-400 transition-colors">인사말</a></li>
+                        <li><a href="pricing.html" class="hover:text-amber-400 transition-colors">진료비안내</a></li>
+                        <li><a href="#neutering" class="hover:text-amber-400 transition-colors">중성화수술</a></li>
+                        <li><a href="#promotion" class="hover:text-amber-400 transition-colors">홍보자료</a></li>
                     </ul>
                 </div>
             </div>
