--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                     <div class="grid md:grid-cols-5 gap-0">
                         <!-- Image Section -->
                         <div class="md:col-span-2 relative h-[500px] md:h-auto bg-slate-100 group">
-                            <img src="https://images.unsplash.com/photo-1537368910025-700350fe46c7?q=80&w=1000&auto=format&fit=crop" 
+                            <img src="director.jpg" 
                                  alt="문현철 원장" 
                                  class="absolute inset-0 w-full h-full object-cover object-top transition-all duration-700" />
                             <div class="absolute inset-0 bg-gradient-to-t from-slate-900/60 to-transparent md:bg-none"></div>
