--- a/pricing.html
+++ b/pricing.html
@@ -71,7 +71,21 @@
 
           <!-- Desktop Navigation -->
           <nav class="hidden md:flex items-center space-x-6 lg:space-x-8">
-            <a href="index.html#greetings" class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors">인사말</a>
+            <!-- Hospital Intro Dropdown -->
+            <div class="relative group">
+                <button class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors flex items-center gap-1 py-4">
+                    병원소개
+                    <i data-lucide="chevron-down" class="w-4 h-4"></i>
+                </button>
+                <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block">
+                    <div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100">
+                        <a href="index.html#greetings" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">인사말</a>
+                        <a href="index.html#contact" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">진료시간안내</a>
+                        <a href="index.html#contact" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors">찾아오시는길</a>
+                    </div>
+                </div>
+            </div>
+
             <a href="pricing.html" class="text-sm font-bold text-amber-600 transition-colors">진료비안내</a>
             
             <!-- Neutering Dropdown -->
@@ -93,7 +107,7 @@
             </div>
 
             <a href="stemcell.html" class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors">줄기세포/엑소좀 치료(준비중)</a>
-            <a href="index.html#promotion" class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors">홍보자료</a>
+            <a href="index.html#promotion" class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors">커뮤니티</a>
           </nav>
 
           <!-- Mobile Menu Button -->
@@ -106,7 +120,19 @@
       <!-- Mobile Menu Overlay -->
       <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-white shadow-lg md:hidden border-t max-h-[80vh] overflow-y-auto">
           <div class="flex flex-col py-4">
-            <a href="index.html#greetings" class="px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">인사말</a>
+            <!-- Mobile Intro Accordion -->
+            <div>
+                <button id="mobile-about-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">
+                    병원소개
+                    <i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-about-icon"></i>
+                </button>
+                <div id="mobile-about-menu" class="hidden bg-slate-50 border-y border-slate-100">
+                    <a href="index.html#greetings" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">인사말</a>
+                    <a href="index.html#contact" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">진료시간안내</a>
+                    <a href="index.html#contact" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">찾아오시는길</a>
+                </div>
+            </div>
+
             <a href="pricing.html" class="px-6 py-3 text-amber-600 font-bold bg-amber-50">진료비안내</a>
             
             <!-- Mobile Neutering Accordion -->
@@ -126,7 +152,7 @@
             </div>
 
             <a href="stemcell.html" class="px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">줄기세포/엑소좀 치료(준비중)</a>
-            <a href="index.html#promotion" class="px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">홍보자료</a>
+            <a href="index.html#promotion" class="px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">커뮤니티</a>
           </div>
       </div>
     </header>
@@ -170,7 +196,7 @@
                                  <span class="font-bold text-slate-900 text-lg">35,000 원</span>
                              </li>
                              <li class="flex justify-between items-center text-sm group">
-                                 <span class="text-slate-600 group-hover:text-slate-900 transition-colors">코로나 / 독감 / 광견병 (1개)</span>
+                                 <span class="text-slate-600 group-hover:text-slate-900 transition-colors">코로나 / 독감/ 광견병(각1회 접종시)</span>
                                  <span class="font-bold text-slate-900 text-lg">15,000 원</span>
                              </li>
                              <li class="my-2 border-t border-dashed border-slate-200"></li>
@@ -204,7 +230,7 @@
                          </div>
                          <ul class="space-y-4">
                              <li class="flex justify-between items-center text-sm group">
-                                 <span class="text-slate-600 group-hover:text-slate-900 transition-colors">혈액 정밀 검사</span>
+                                 <span class="text-slate-600 group-hover:text-slate-900 transition-colors">정밀 혈액 검사</span>
                                  <span class="font-bold text-slate-900 text-lg">180,000 원</span>
                              </li>
                              <li class="flex justify-between items-center text-sm group">
@@ -238,7 +264,7 @@
                             </div>
                             <div>
                                 <h3 class="text-2xl font-bold text-white">중성화 수술 비용</h3>
-                                <p class="text-slate-400 text-sm">마취 및 수술 비용 포함 (부가세 포함)</p>
+                                <p class="text-slate-400 text-sm">신체 검사, 마취비, 2주 지속성 항생제 비용 포함</p>
                             </div>
                         </div>
                     </div>
@@ -309,7 +335,7 @@
                             </div>
                             <div>
                                 <h3 class="text-2xl font-bold text-white">스켈링 비용</h3>
-                                <p class="text-slate-400 text-sm">마취 및 스켈링 비용 포함 (부가세 포함)</p>
+                                <p class="text-slate-400 text-sm">신체 검사, 마취비, 2주 지속성 항생제 비용 포함</p>
                             </div>
                         </div>
                     </div>
@@ -374,13 +400,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
                 <div>
-                    <h3 class="text-2xl font-serif font-bold text-white mb-6">참좋은</h3>
+                    <h3 class="text-2xl font-serif font-bold text-white mb-6">참좋은동물병원</h3>
                     <p class="text-slate-400 text-sm leading-relaxed mb-6">참좋은동물병원은 생명을 존중하는 마음으로 최상의 진료 서비스를 제공합니다.</p>
-                    <div class="flex space-x-4">
-                        <a href="#" class="hover:text-amber-400 transition-colors"><i data-lucide="instagram" class="w-5 h-5"></i></a>
-                        <a href="#" class="hover:text-amber-400 transition-colors"><i data-lucide="facebook" class="w-5 h-5"></i></a>
-                        <a href="#" class="hover:text-amber-400 transition-colors"><i data-lucide="youtube" class="w-5 h-5"></i></a>
-                    </div>
                 </div>
                 <div>
                     <h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Contact Us</h4>
@@ -416,13 +437,13 @@
                         <li><a href="index.html#greetings" class="hover:text-amber-400 transition-colors">인사말</a></li>
                         <li><a href="pricing.html" class="hover:text-amber-400 transition-colors">진료비안내</a></li>
                         <li><a href="index.html#neutering" class="hover:text-amber-400 transition-colors">중성화수술</a></li>
-                        <li><a href="index.html#promotion" class="hover:text-amber-400 transition-colors">홍보자료</a></li>
+                        <li><a href="index.html#promotion" class="hover:text-amber-400 transition-colors">커뮤니티</a></li>
                     </ul>
                 </div>
             </div>
             <div class="border-t border-slate-800 mt-16 pt-8 text-center text-xs text-slate-500">
-                <p>© 2024 Chamjoeun Animal Medical Center. All rights reserved.</p>
-                <p class="mt-2">사업자등록번호: 123-45-67890 | 대표: 문현철</p>
+                <p>© 2026 Chamzeon Spray & Neuter Clinic. All rights reserved.</p>
+                <p class="mt-2">사업자등록번호: 615-16-96288 | 대표: 문현철</p>
             </div>
         </div>
     </footer>
@@ -454,6 +475,18 @@
           mobileNeuteringBtn.addEventListener('click', () => {
               mobileNeuteringMenu.classList.toggle('hidden');
               mobileNeuteringIcon.classList.toggle('rotate-180');
+          });
+      }
+
+      // Mobile About Submenu Toggle
+      const mobileAboutBtn = document.getElementById('mobile-about-btn');
+      const mobileAboutMenu = document.getElementById('mobile-about-menu');
+      const mobileAboutIcon = document.getElementById('mobile-about-icon');
+
+      if(mobileAboutBtn) {
+          mobileAboutBtn.addEventListener('click', () => {
+              mobileAboutMenu.classList.toggle('hidden');
+              mobileAboutIcon.classList.toggle('rotate-180');
           });
       }
     </script>
