--- a/stemcell.html
+++ b/stemcell.html
@@ -16,7 +16,21 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center"><a href="index.html" class="flex items-center gap-2 group"><div class="w-10 h-10 rounded-full flex items-center justify-center border-2 border-slate-900 text-slate-900"><span class="font-serif font-bold text-xl">C</span></div><div class="flex flex-col"><span class="text-xl font-bold tracking-tight text-slate-900">참좋은</span><span class="text-xs tracking-widest text-slate-600">SPRAY & NEUTER CLINIC</span></div></a></div>
                 <nav class="hidden md:flex items-center space-x-6 lg:space-x-8">
-                    <a href="index.html#greetings" class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors">인사말</a>
+                    <!-- Hospital Intro Dropdown -->
+                    <div class="relative group">
+                        <button class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors flex items-center gap-1 py-4">
+                            병원소개
+                            <i data-lucide="chevron-down" class="w-4 h-4"></i>
+                        </button>
+                        <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block">
+                            <div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100">
+                                <a href="index.html#greetings" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">인사말</a>
+                                <a href="index.html#contact" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">진료시간안내</a>
+                                <a href="index.html#contact" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors">찾아오시는길</a>
+                            </div>
+                        </div>
+                    </div>
+
                     <a href="pricing.html" class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors">진료비안내</a>
                     <div class="relative group">
                         <button class="text-sm font-bold text-amber-600 transition-colors flex items-center gap-1 py-4">중성화수술<i data-lucide="chevron-down" class="w-4 h-4"></i></button>
@@ -31,8 +45,8 @@
                             </div>
                         </div>
                     </div>
-                    <a href="stemcell.html" class="text-sm font-bold text-amber-600 transition-colors">줄기세포/엑소좀</a>
-                    <a href="index.html#promotion" class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors">홍보자료</a>
+                    <a href="stemcell.html" class="text-sm font-bold text-amber-600 transition-colors">줄기세포/엑소좀 치료(준비중)</a>
+                    <a href="index.html#promotion" class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors">커뮤니티</a>
                 </nav>
             </div>
         </div>
@@ -52,7 +66,7 @@
                          </h2>
                          <p class="text-slate-600 text-lg max-w-2xl mx-auto mb-10">
                              난치성 질환 치료의 새로운 희망, <br/>
-                             최첨단 재생 의학 센터가 곧 찾아옵니다.
+                             최첨단 재생 의학이 곧 찾아옵니다.
                          </p>
                          <div class="flex flex-wrap justify-center gap-4 text-sm font-medium text-slate-500">
                              <span class="flex items-center gap-2"><i data-lucide="microscope" class="w-4 h-4"></i> 재생 의학</span>
@@ -85,13 +99,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
                 <div>
-                    <h3 class="text-2xl font-serif font-bold text-white mb-6">참좋은</h3>
+                    <h3 class="text-2xl font-serif font-bold text-white mb-6">참좋은동물병원</h3>
                     <p class="text-slate-400 text-sm leading-relaxed mb-6">참좋은동물병원은 생명을 존중하는 마음으로 최상의 진료 서비스를 제공합니다.</p>
-                    <div class="flex space-x-4">
-                        <a href="#" class="hover:text-amber-400 transition-colors"><i data-lucide="instagram" class="w-5 h-5"></i></a>
-                        <a href="#" class="hover:text-amber-400 transition-colors"><i data-lucide="facebook" class="w-5 h-5"></i></a>
-                        <a href="#" class="hover:text-amber-400 transition-colors"><i data-lucide="youtube" class="w-5 h-5"></i></a>
-                    </div>
                 </div>
                 <div>
                     <h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Contact Us</h4>
@@ -127,13 +136,13 @@
                         <li><a href="index.html#greetings" class="hover:text-amber-400 transition-colors">인사말</a></li>
                         <li><a href="pricing.html" class="hover:text-amber-400 transition-colors">진료비안내</a></li>
                         <li><a href="index.html#neutering" class="hover:text-amber-400 transition-colors">중성화수술</a></li>
-                        <li><a href="index.html#promotion" class="hover:text-amber-400 transition-colors">홍보자료</a></li>
+                        <li><a href="index.html#promotion" class="hover:text-amber-400 transition-colors">커뮤니티</a></li>
                     </ul>
                 </div>
             </div>
             <div class="border-t border-slate-800 mt-16 pt-8 text-center text-xs text-slate-500">
-                <p>© 2024 Chamjoeun Animal Medical Center. All rights reserved.</p>
-                <p class="mt-2">사업자등록번호: 123-45-67890 | 대표: 문현철</p>
+                <p>© 2026 Chamzeon Spray & Neuter Clinic. All rights reserved.</p>
+                <p class="mt-2">사업자등록번호: 615-16-96288 | 대표: 문현철</p>
             </div>
         </div>
     </footer>
