--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                 <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block">
                     <div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100">
                         <a href="index.html#greetings" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">인사말</a>
-                        <a href="index.html#contact" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">진료시간안내</a>
-                        <a href="index.html#contact" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors">찾아오시는길</a>
+                        <a href="clinic-hours.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">진료시간안내</a>
+                        <a href="location.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors">찾아오시는길</a>
                     </div>
                 </div>
             </div>
@@ -159,8 +159,8 @@
                 </button>
                 <div id="mobile-about-menu" class="hidden bg-slate-50 border-y border-slate-100">
                     <a href="index.html#greetings" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">인사말</a>
-                    <a href="index.html#contact" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">진료시간안내</a>
-                    <a href="index.html#contact" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">찾아오시는길</a>
+                    <a href="clinic-hours.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">진료시간안내</a>
+                    <a href="location.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">찾아오시는길</a>
                 </div>
             </div>
 
@@ -209,7 +209,7 @@
         <span class="absolute right-full mr-3 bg-slate-800 text-white text-xs py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">참좋은 TV</span>
       </a>
       <!-- Map -->
-      <a href="#contact" class="hidden md:flex flex-col items-center justify-center w-16 h-16 bg-white hover:bg-slate-50 text-slate-800 border border-slate-200 rounded-xl shadow-lg transition-transform hover:scale-110 group relative">
+      <a href="location.html" class="hidden md:flex flex-col items-center justify-center w-16 h-16 bg-white hover:bg-slate-50 text-slate-800 border border-slate-200 rounded-xl shadow-lg transition-transform hover:scale-110 group relative">
         <i data-lucide="map-pin" class="w-6 h-6 mb-0.5 text-amber-600"></i>
         <span class="text-[10px] font-bold">Map</span>
         <span class="absolute right-full mr-3 bg-slate-800 text-white text-xs py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">오시는 길</span>
