--- a/stemcell.html
+++ b/stemcell.html
@@ -46,7 +46,19 @@
                         </div>
                     </div>
                     <a href="stemcell.html" class="text-sm font-bold text-amber-600 transition-colors">줄기세포/엑소좀 치료(준비중)</a>
-                    <a href="index.html#promotion" class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors">커뮤니티</a>
+                    
+                    <div class="relative group">
+                        <button class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors flex items-center gap-1 py-4">
+                            커뮤니티
+                            <i data-lucide="chevron-down" class="w-4 h-4"></i>
+                        </button>
+                        <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block">
+                            <div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100">
+                                <a href="notice.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">공지사항</a>
+                                <a href="tv-appearance.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors">방송출연</a>
+                            </div>
+                        </div>
+                    </div>
                 </nav>
                 
                 <!-- Mobile Menu Button -->
@@ -86,7 +98,16 @@
                     </div>
                 </div>
                 <a href="stemcell.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">줄기세포/엑소좀 치료(준비중)</a>
-                <a href="index.html#promotion" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">커뮤니티</a>
+                <div>
+                    <button id="mobile-community-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">
+                        커뮤니티
+                        <i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-community-icon"></i>
+                    </button>
+                    <div id="mobile-community-menu" class="hidden bg-slate-50 border-y border-slate-100">
+                        <a href="notice.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">공지사항</a>
+                        <a href="tv-appearance.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">방송출연</a>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
@@ -218,6 +239,7 @@
 
       setupSubmenu('mobile-about-btn', 'mobile-about-menu', 'mobile-about-icon');
       setupSubmenu('mobile-neutering-btn', 'mobile-neutering-menu', 'mobile-neutering-icon');
+      setupSubmenu('mobile-community-btn', 'mobile-community-menu', 'mobile-community-icon');
     </script>
 </body>
 </html>
