--- a/neutering-photos.html
+++ b/neutering-photos.html
@@ -39,14 +39,26 @@
                                 <a href="neutering-process.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">중성화 수술 과정</a>
                                 <a href="neutering-micro-incision.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">초미세 절개</a>
                                 <a href="neutering-cost.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">합리적인 비용</a>
-                                <a href="neutering-care.html" class="block px-4 py-3 text-sm font-bold bg-amber-50 text-amber-700">수술 후 회복 관리</a>
-                                <a href="neutering-photos.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">수술 후 사진</a>
+                                <a href="neutering-care.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">수술 후 회복 관리</a>
+                                <a href="neutering-photos.html" class="block px-4 py-3 text-sm font-bold bg-amber-50 text-amber-700">수술 후 사진</a>
                                 <a href="neutering-reviews.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors">수술 후기</a>
                             </div>
                         </div>
                     </div>
                     <a href="stemcell.html" class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors">줄기세포/엑소좀 치료(준비중)</a>
-                    <a href="index.html#promotion" class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors">커뮤니티</a>
+                    
+                    <div class="relative group">
+                        <button class="text-sm font-medium text-slate-800 hover:text-amber-500 transition-colors flex items-center gap-1 py-4">
+                            커뮤니티
+                            <i data-lucide="chevron-down" class="w-4 h-4"></i>
+                        </button>
+                        <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block">
+                            <div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100">
+                                <a href="notice.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors border-b border-slate-50">공지사항</a>
+                                <a href="tv-appearance.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 transition-colors">방송출연</a>
+                            </div>
+                        </div>
+                    </div>
                 </nav>
                 
                 <!-- Mobile Menu Button -->
@@ -86,7 +98,16 @@
                     </div>
                 </div>
                 <a href="stemcell.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">줄기세포/엑소좀 치료(준비중)</a>
-                <a href="index.html#promotion" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">커뮤니티</a>
+                <div>
+                    <button id="mobile-community-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">
+                        커뮤니티
+                        <i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-community-icon"></i>
+                    </button>
+                    <div id="mobile-community-menu" class="hidden bg-slate-50 border-y border-slate-100">
+                        <a href="notice.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">공지사항</a>
+                        <a href="tv-appearance.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">방송출연</a>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
@@ -229,6 +250,7 @@
         };
         setupSubmenu('mobile-about-btn', 'mobile-about-menu', 'mobile-about-icon');
         setupSubmenu('mobile-neutering-btn', 'mobile-neutering-menu', 'mobile-neutering-icon');
+        setupSubmenu('mobile-community-btn', 'mobile-community-menu', 'mobile-community-icon');
     </script>
 </body>
 </html>
