--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>참좋은동물병원</title>
     <meta name="description" content="중성화수술 전문, 반려동물 건강 지킴이 참좋은동물병원입니다." />
+    <link rel="icon" href="picon.jpg" type="image/jpeg" />
     
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -564,18 +565,6 @@
                             <i data-lucide="check-circle" class="w-4 h-4 text-amber-500"></i> 감염 위험 감소
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Brief Review Section (Compact) -->
-        <section class="py-16 bg-white">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-                <h3 class="text-xl font-bold text-slate-900 mb-8 italic font-serif">"많은 보호자분들이 믿고 선택해주셨습니다"</h3>
-                <div class="flex flex-wrap justify-center gap-4">
-                     <a href="neutering-reviews.html" class="inline-flex items-center gap-2 px-6 py-3 bg-slate-900 text-white rounded-full text-sm font-bold hover:bg-amber-600 transition-colors">
-                        <i data-lucide="message-square" class="w-4 h-4"></i> 수술 후기 전체보기
-                     </a>
                 </div>
             </div>
         </section>
