--- a/neutering-photos.html
+++ b/neutering-photos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>중성화 수술 후 사진 - 참좋은동물병원</title>
+    <link rel="icon" href="picon.jpg" type="image/jpeg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -158,17 +159,6 @@
                             <p class="text-[10px] text-slate-300 mt-1">절개 크기: 약 0.5cm</p>
                         </div>
                     </div>
-                </div>
-
-                <div class="mt-16 bg-slate-50 p-8 rounded-3xl border border-slate-200">
-                    <div class="flex items-center gap-3 mb-4">
-                        <i data-lucide="info" class="w-6 h-6 text-amber-600"></i>
-                        <h3 class="text-lg font-bold text-slate-900">상세 사진 안내</h3>
-                    </div>
-                    <p class="text-slate-600 text-sm leading-relaxed">
-                        의료법 준수를 위해 수술 부위의 구체적인 전/후 비교 상세 사진은 <strong>병원 내원 시 상담실에서 직접 확인</strong>하실 수 있습니다.<br/>
-                        참좋은동물병원은 보호자님의 알 권리를 존중하며, 수술의 투명성을 위해 모든 과정과 결과를 정직하게 공유해 드립니다.
-                    </p>
                 </div>
             </div>
         </section>
