--- a/neutering-reviews.html
+++ b/neutering-reviews.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>중성화 수술 후기 - 참좋은동물병원</title>
+    <link rel="icon" href="picon.jpg" type="image/jpeg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -232,3 +233,11 @@
                     menu.classList.toggle('hidden');
                     icon.classList.toggle('rotate-180');
                 });
+            }
+        };
+        setupSubmenu('mobile-about-btn', 'mobile-about-menu', 'mobile-about-icon');
+        setupSubmenu('mobile-neutering-btn', 'mobile-neutering-menu', 'mobile-neutering-icon');
+        setupSubmenu('mobile-community-btn', 'mobile-community-menu', 'mobile-community-icon');
+    </script>
+</body>
+</html>
