--- a/location.html
+++ b/location.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>찾아오시는 길 - 참좋은동물병원</title>
     <meta name="description" content="참좋은동물병원 위치 및 주차 안내입니다. 병원 옆 KT전화국 주차장을 이용하세요." />
+    <link rel="icon" href="picon.png" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -221,7 +222,6 @@
             </div>
         </div>
     </footer>
-
     <script>
       lucide.createIcons();
       const header = document.getElementById('main-header');
