--- a/neutering-micro-incision.html
+++ b/neutering-micro-incision.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>초미세 절개 - 참좋은동물병원</title>
-    <link rel="icon" href="picon.jpg" type="image/jpeg" />
+    <link rel="icon" href="picon.png" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
