--- a/neutering-reviews.html
+++ b/neutering-reviews.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>수술 후기 - 참좋은동물병원</title>
     <meta name="description" content="참좋은동물병원에서 중성화 수술을 받은 보호자님들의 솔직한 후기입니다." />
-    <link rel="icon" href="picon.jpg" type="image/jpeg" />
+    <link rel="icon" href="picon.png" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
