--- a/pricing.html
+++ b/pricing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>진료비 안내 - 참좋은동물병원</title>
     <meta name="description" content="참좋은동물병원의 투명하고 합리적인 진료비를 안내해 드립니다." />
-    <link rel="icon" href="picon.jpg" type="image/jpeg" />
+    <link rel="icon" href="picon.png" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
